[gd_scene load_steps=2 format=3 uid="uid://cg3mmvabihu81"]

[ext_resource type="Script" uid="uid://djn2gisplef3a" path="res://Scenes/UI/MainMenu/level_select.gd" id="1_2r0tu"]

[node name="LevelSelectPnl" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -323.0
offset_top = -182.0
offset_right = 323.0
offset_bottom = 182.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2r0tu")

[node name="LevelGrid" type="GridContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = 1.0
offset_right = 20.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 0

[node name="BackBtn" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Back"

[node name="LoadBtn" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Load Selected Level"

[connection signal="pressed" from="HBoxContainer/BackBtn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/LoadBtn" to="." method="_on_load_btn_pressed"]
